[UPDATE] add meta title

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <title>BeautyX - Đặt lịch làm đẹp online</title>
+  <meta name="description" content="BeautyX - Nền tảng giúp bạn tìm kiếm Spa, Salon,.. phù hợp với nhu cầu làm đẹp. Đặt lịch dễ dàng, thanh toán nhanh chóng với hơn 5000 địa điểm làm đẹp trên toàn quốc." />
+  <meta name="keywords" content="beautyx, beautyx.vn, đặt lịch làm đẹp online, app đặt lịch làm đẹp, ứng dụng đặt lịch làm đẹp."/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Trang chủ - BeautyX</title>
+  
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
