[UPDATE] icon header

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <title>BeautyX - Đặt lịch làm đẹp online</title>
+  <title>😘😭😊👌😩💕😒BeautyX - Đặt lịch làm đẹp online</title>
   <meta name="description"
     content="BeautyX - Nền tảng giúp bạn tìm kiếm Spa, Salon,.. phù hợp với nhu cầu làm đẹp. Đặt lịch dễ dàng, thanh toán nhanh chóng với hơn 5000 địa điểm làm đẹp trên toàn quốc." />
   <meta name="keywords"
